// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ToolMessage /> > JSON rendering > renders pretty JSON in ink frame 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                              │
│                                                                              │
│ {                                                                            │
│   "a": 1,                                                                    │
│   "b": 2                                                                     │
│ }                                                                            │
"
`;

exports[`<ToolMessage /> > ToolStatusIndicator rendering > shows ? for Confirming status 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ?  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > ToolStatusIndicator rendering > shows - for Canceled status 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ -  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > ToolStatusIndicator rendering > shows MockRespondingSpinner for Executing status when streamingState is Responding 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ⊶  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > ToolStatusIndicator rendering > shows o for Pending status 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ o  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > ToolStatusIndicator rendering > shows paused spinner for Executing status when streamingState is Idle 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ⊶  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > ToolStatusIndicator rendering > shows paused spinner for Executing status when streamingState is WaitingForConfirmation 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ⊶  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > ToolStatusIndicator rendering > shows x for Error status 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ x  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > ToolStatusIndicator rendering > shows ✓ for Success status 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > renders AnsiOutputText for AnsiOutput results 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                              │
│                                                                              │
│ hello                                                                        │
"
`;

exports[`<ToolMessage /> > renders DiffRenderer for diff results 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                              │
│                                                                              │
│ 1 - old                                                                      │
│ 1 + new                                                                      │
"
`;

exports[`<ToolMessage /> > renders McpProgressIndicator with percentage and message for executing tools 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ⊶  test-tool A tool for testing                                              │
│                                                                              │
│ ████████░░░░░░░░░░░░ 42%                                                     │
│ Working on it...                                                             │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > renders basic tool information 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > renders emphasis correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                            ← │
│                                                                              │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > renders emphasis correctly 2`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > renders indeterminate progress when total is missing 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ⊶  test-tool A tool for testing                                              │
│                                                                              │
│ ███████░░░░░░░░░░░░░ 7                                                       │
│ Test result                                                                  │
"
`;

exports[`<ToolMessage /> > renders only percentage when progressMessage is missing 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ⊶  test-tool A tool for testing                                              │
│                                                                              │
│ ███████████████░░░░░ 75%                                                     │
│ Test result                                                                  │
"
`;
